js-regexp.pegjs.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { RegularExpression: peg$parseRegularExpression },
        peg$startRuleFunction  = peg$parseRegularExpression,

        peg$c0 = "/",
        peg$c1 = peg$literalExpectation("/", false),
        peg$c2 = /^[gimsuy]/,
        peg$c3 = peg$classExpectation(["g", "i", "m", "s", "u", "y"], false, false),
        peg$c4 = function(pattern, flags) {
              return new XXToken({
                type: 'RegularExpression',
                pattern: pattern, flags: flags.join(''),
                global: flags.includes('g'),
                ignoreCase: flags.includes('i'),
                multiline: flags.includes('m'),
                dotAll: flags.includes('s'),
                unicode: flags.includes('u'),
                sticky: flags.includes('y')
              });
            },
        peg$c5 = "|",
        peg$c6 = peg$literalExpectation("|", false),
        peg$c7 = function(first, alternatives) {
              if ( alternatives.length == 0 )
                return first;
              alternatives = alternatives.map(x => x[1]);
              alternatives.unshift(first);
              return new XXToken({type: 'Disjunction', alternatives: alternatives, number: alternatives.length});
            },
        peg$c8 = function(first, terms) { terms.unshift(first); return new XXToken({type:'TermList', terms: terms, number: terms.length}); },
        peg$c9 = function(term) { return term; },
        peg$c10 = "",
        peg$c11 = function() { return new XXToken({type:'Empty'}); },
        peg$c12 = function(atom, quantifier) { quantifier.term = atom; return quantifier; },
        peg$c13 = "^",
        peg$c14 = peg$literalExpectation("^", false),
        peg$c15 = function() { return new XXToken({type:'Assertion', name:'anchor_begin'}); },
        peg$c16 = "$",
        peg$c17 = peg$literalExpectation("$", false),
        peg$c18 = function() { return new XXToken({type:'Assertion', name:'anchor_end'}); },
        peg$c19 = "\\b",
        peg$c20 = peg$literalExpectation("\\b", false),
        peg$c21 = function() { return new XXToken({type:'Assertion', name:'word_boundary'}); },
        peg$c22 = "\\B",
        peg$c23 = peg$literalExpectation("\\B", false),
        peg$c24 = function() { return new XXToken({type:'Assertion', name:'non_word_boundary'}); },
        peg$c25 = "(",
        peg$c26 = peg$literalExpectation("(", false),
        peg$c27 = "?=",
        peg$c28 = peg$literalExpectation("?=", false),
        peg$c29 = "?!",
        peg$c30 = peg$literalExpectation("?!", false),
        peg$c31 = ")",
        peg$c32 = peg$literalExpectation(")", false),
        peg$c33 = function(modality, content) { return new XXToken({type:'Assertion', name:'lookahead', content: content, invert:(modality=='?!')}); },
        peg$c34 = "?<=",
        peg$c35 = peg$literalExpectation("?<=", false),
        peg$c36 = "?<!",
        peg$c37 = peg$literalExpectation("?<!", false),
        peg$c38 = function(modality, content) { return new XXToken({type:'Assertion', name:'lookbehind', content: content, invert:(modality=='?<!')}); },
        peg$c39 = "?",
        peg$c40 = peg$literalExpectation("?", false),
        peg$c41 = function(prefix, greedy) { prefix.repeatNonGreedy= true; return prefix; },
        peg$c42 = "*",
        peg$c43 = peg$literalExpectation("*", false),
        peg$c44 = function() { return new XXToken({type:'Quantifier', repeat:'any', repeatMin:0}); },
        peg$c45 = "+",
        peg$c46 = peg$literalExpectation("+", false),
        peg$c47 = function() { return new XXToken({type:'Quantifier', repeat:'required', repeatMin:1}); },
        peg$c48 = function() { return new XXToken({type:'Quantifier', repeat:'optional', repeatMin:0, repeatMax:1}); },
        peg$c49 = "{",
        peg$c50 = peg$literalExpectation("{", false),
        peg$c51 = /^[0-9]/,
        peg$c52 = peg$classExpectation([["0", "9"]], false, false),
        peg$c53 = "}",
        peg$c54 = peg$literalExpectation("}", false),
        peg$c55 = function(exact) {
              let n = readInt(exact);
              return new XXToken({type:'Quantifier', repeat:'exact', repeatMin:n, repeatMax:n});
            },
        peg$c56 = ",}",
        peg$c57 = peg$literalExpectation(",}", false),
        peg$c58 = function(min) { return new XXToken({type:'Quantifier', repeat:'min', repeatMin:readInt(min)}); },
        peg$c59 = ",",
        peg$c60 = peg$literalExpectation(",", false),
        peg$c61 = function(min, max) { return new XXToken({type:'Quantifier', repeat:'minmax', repeatMin:readInt(min), repeatMax:readInt(max)}); },
        peg$c62 = ".",
        peg$c63 = peg$literalExpectation(".", false),
        peg$c64 = function() { return new XXToken({type: 'CharacterSet', code:'any'}); },
        peg$c65 = "\\",
        peg$c66 = peg$literalExpectation("\\", false),
        peg$c67 = function(esc) { return esc; },
        peg$c68 = "?:",
        peg$c69 = peg$literalExpectation("?:", false),
        peg$c70 = function(capture, content) {
              capture = (capture!='?:');
              return new XXToken({type:'Group', content: content, capture: capture, number: capture?compteur:null });
            },
        peg$c71 = "(?",
        peg$c72 = peg$literalExpectation("(?", false),
        peg$c73 = function(name, content) { return new XXToken({type:'Group', name: name.value, content: content, capture: true, number: compteur}); },
        peg$c74 = "<",
        peg$c75 = peg$literalExpectation("<", false),
        peg$c76 = /^[^!-#%-@]/,
        peg$c77 = peg$classExpectation([["!", "#"], ["%", "@"]], true, false),
        peg$c78 = /^[^!-#%-\/:-@]/,
        peg$c79 = peg$classExpectation([["!", "#"], ["%", "/"], [":", "@"]], true, false),
        peg$c80 = ">",
        peg$c81 = peg$literalExpectation(">", false),
        peg$c82 = function(name1, name2) { return new XXToken({type:'GroupName', value: name1+name2.join('')}); },
        peg$c83 = "[",
        peg$c84 = peg$literalExpectation("[", false),
        peg$c85 = "]",
        peg$c86 = peg$literalExpectation("]", false),
        peg$c87 = function(invert, parts) { return new XXToken({type: 'CharacterClass', parts: parts, number: parts.length, invert:(invert=="^")}); },
        peg$c88 = function() { return []; },
        peg$c89 = "-",
        peg$c90 = peg$literalExpectation("-", false),
        peg$c91 = function(begin, end, ranges) {
              ranges.unshift(new XXToken({type: 'CharacterRange', begin: begin, end: end}));
              return ranges;
            },
        peg$c92 = function(first, ranges) { ranges.unshift(first); return ranges; },
        peg$c93 = function(first) { return [first]; },
        peg$c94 = function() { return new XXToken({type:'Litteral', value: '-'}); },
        peg$c95 = function(value) { return value; },
        peg$c96 = /^[^\-\\\]]/,
        peg$c97 = peg$classExpectation(["-", "\\", "]"], true, false),
        peg$c98 = function(literal) { return new XXToken({type:'Litteral', value: literal}); },
        peg$c99 = "b",
        peg$c100 = peg$literalExpectation("b", false),
        peg$c101 = function() { return new XXToken({type:'ControlEscape', code: 'b'}); },
        peg$c102 = /^[^\/\^$\\.*+?()[\]{}|]/,
        peg$c103 = peg$classExpectation(["/", "^", "$", "\\", ".", "*", "+", "?", "(", ")", "[", "]", "{", "}", "|"], true, false),
        peg$c104 = /^[1-9]/,
        peg$c105 = peg$classExpectation([["1", "9"]], false, false),
        peg$c106 = function(code) { return new XXToken({type: 'GroupReference', number: parseInt(code)}); },
        peg$c107 = "k",
        peg$c108 = peg$literalExpectation("k", false),
        peg$c109 = function(name) { return new XXToken({type: 'GroupReference', name: name.value}); },
        peg$c110 = /^[dDsSwW]/,
        peg$c111 = peg$classExpectation(["d", "D", "s", "S", "w", "W"], false, false),
        peg$c112 = function(code) { return new XXToken({type:'CharacterSet', code: code}); },
        peg$c113 = /^[fnrtv]/,
        peg$c114 = peg$classExpectation(["f", "n", "r", "t", "v"], false, false),
        peg$c115 = function(code) { return new XXToken({type:'ControlEscape', code: code}); },
        peg$c116 = "c",
        peg$c117 = peg$literalExpectation("c", false),
        peg$c118 = /^[a-zA-Z]/,
        peg$c119 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c120 = function(code) { return new XXToken({type:'ControlCharacter', control: code.toUpperCase(), code: code.charCodeAt()-64}); },
        peg$c121 = "0",
        peg$c122 = peg$literalExpectation("0", false),
        peg$c123 = function() { return new XXToken({type:'Litteral', name: 'NUL'}); },
        peg$c124 = "x",
        peg$c125 = peg$literalExpectation("x", false),
        peg$c126 = /^[0-9A-Fa-f]/,
        peg$c127 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
        peg$c128 = function(code) { return new XXToken({type:'HexEscape', code: code.join('').toUpperCase()}); },
        peg$c129 = "u",
        peg$c130 = peg$literalExpectation("u", false),
        peg$c131 = /^[0-9a-fA-F]/,
        peg$c132 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
        peg$c133 = function(code) { return new XXToken({type:'UnicodeEscape', code: code.join('').toUpperCase()}); },
        peg$c134 = "u{",
        peg$c135 = peg$literalExpectation("u{", false),
        peg$c136 = peg$anyExpectation(),
        peg$c137 = function(char) { return new XXToken({type:'Litteral', value: char}); },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseRegularExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 47) {
        s1 = peg$c0;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePattern();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 47) {
            s3 = peg$c0;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            if (peg$c2.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              if (peg$c2.test(input.charAt(peg$currPos))) {
                s5 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsePattern() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseAlternative();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 124) {
          s4 = peg$c5;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseAlternative();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 124) {
            s4 = peg$c5;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseAlternative();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseAlternative() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseTerm();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseTerm();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseTerm();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseTerm();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$c10;
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c11();
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseTerm() {
      var s0, s1, s2;

      s0 = peg$parseAssertion();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseAtom();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseQuantifier();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseAtom();
        }
      }

      return s0;
    }

    function peg$parseAssertion() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 94) {
        s1 = peg$c13;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c15();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 36) {
          s1 = peg$c16;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c18();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 2) === peg$c19) {
            s1 = peg$c19;
            peg$currPos += 2;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c21();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 2) === peg$c22) {
              s1 = peg$c22;
              peg$currPos += 2;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c23); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c24();
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 40) {
                s1 = peg$c25;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c26); }
              }
              if (s1 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c27) {
                  s2 = peg$c27;
                  peg$currPos += 2;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c28); }
                }
                if (s2 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c29) {
                    s2 = peg$c29;
                    peg$currPos += 2;
                  } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c30); }
                  }
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parsePattern();
                  if (s3 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s4 = peg$c31;
                      peg$currPos++;
                    } else {
                      s4 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c32); }
                    }
                    if (s4 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c33(s2, s3);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 40) {
                  s1 = peg$c25;
                  peg$currPos++;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c26); }
                }
                if (s1 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 3) === peg$c34) {
                    s2 = peg$c34;
                    peg$currPos += 3;
                  } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c35); }
                  }
                  if (s2 === peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c36) {
                      s2 = peg$c36;
                      peg$currPos += 3;
                    } else {
                      s2 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c37); }
                    }
                  }
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parsePattern();
                    if (s3 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s4 = peg$c31;
                        peg$currPos++;
                      } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c32); }
                      }
                      if (s4 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c38(s2, s3);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseQuantifier() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseQuantifierPrefix();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 63) {
          s2 = peg$c39;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c40); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c41(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseQuantifierPrefix();
      }

      return s0;
    }

    function peg$parseQuantifierPrefix() {
      var s0, s1, s2, s3, s4, s5;
